kubernetes/api-gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-api-gateway
  name: api-gateway
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: stellio-api-gateway
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-api-gateway
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: stellio-api-gateway
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: stellio-api-gateway
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: ENVIRONMENT
        - name: APPLICATION_SUBSCRIPTION_SERVICE_URL
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: APPLICATION_SUBSCRIPTION_SERVICE_URL
        image: 'stellio/stellio-api-gateway:dev'
        name: stellio-api-gateway
        ports:
        - containerPort: 8080
          name: api-gateway
        resources: {}
      restartPolicy: Always
status: {}
