kubernetes/kafka-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-kafka
  name: stellio-kafka
spec:
  type: ClusterIP
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    app: stellio-kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-kafka
  name: stellio-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stellio-kafka
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: stellio-kafka
    spec:
      nodeSelector:{}
      containers:
        - args:
            - bash
            - -c
            - 'if [ ! -f /tmp/update_run.sh ]; then echo "ERROR: Did you forget the update_run.sh file that came with this docker-compose.yml file?" && exit 1 ; else sh /tmp/update_run.sh && /etc/confluent/docker/run ; fi'
          image: confluentinc/cp-kafka:7.3.1
          name: stellio-kafka
          ports:
            - containerPort: 29092
          resources: {}
          volumeMounts:
            - mountPath: /tmp/
              name: kafka-configmap
      hostname: stellio-kafka
      restartPolicy: Always
      volumes:
        - name: kafka-configmap
          configMap:
            name: kafka-configmap
status: {}
