kubernetes/ld-context-deployment.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: ld-context-configmap
#   labels:
#     io.kompose.service: ld-context

# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: ld-context
  name: ld-context
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ld-context
  # strategy:
  #   type: Recreate
  template:
    metadata:
      # annotations:
      #   kompose.cmd: kompose convert
      #   kompose.version: 1.28.0 (HEAD)
      # creationTimestamp: null
      labels:
        io.kompose.service: ld-context
        app: ld-context
    spec:
      nodeSelector:
        node-type: app
      containers:
        - image: httpd:alpine
          imagePullPolicy: IfNotPresent
          name: ld-context        
          # livenessProbe:
          #   exec:
          #     command:
          #       - (wget --server-response --spider --quiet  http://ld-context/kimi-context-ngsi.jsonld 2>&1 | awk 'NR==1{print $$2}'|  grep -q -e "200") || exit 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: / #${LD_CONTEXT_FILE}
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: / #${LD_CONTEXT_FILE}
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              name: http
          resources: {}
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs
              name: ld-context-configmap-vol
      hostname: context
      restartPolicy: Always
      volumes:
        - name: ld-context-configmap-vol
          configMap:
            name: ld-context-configmap
            # defaultMode: 420

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ld-context
  name: ld-context
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    io.kompose.service: ld-context
