kubernetes/neo4j-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-neo4j
  name: neo4j
spec:
  ports:
    - name: "7474"
      port: 7474
      targetPort: 7474
    - name: "7687"
      port: 7687
      targetPort: 7687
  selector:
    app: stellio-neo4j
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-neo4j
  name: neo4j
spec:
  selector:
    matchLabels:
      app: stellio-neo4j
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: stellio-neo4j
    spec:
      containers:
      - env:
        - name: NEO4J_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: NEO4J_PASSWORD
        - name: NEO4J_AUTH
          value: neo4j/$(NEO4J_PASSWORD)
        - name: NEO4J_dbms_allow__upgrade
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: NEO4J_ALLOW_UPGRADE
        - name: NEO4J_dbms_default__database
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: NEO4J_DEFAULT_DATABASE
        image: neo4j:4.0
        name: stellio-neo4j
        ports:
        - containerPort: 7474
        - containerPort: 7687
          name: neo4j
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: stellio-neo4j-storage
      restartPolicy: Always
      volumes:
      - name: stellio-neo4j-storage
        persistentVolumeClaim:
          claimName: stellio-neo4j-storage
status: {}
