kubernetes/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: stellio-postgres
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-postgres
  name: postgres
spec:
  selector:
    matchLabels:
      app: stellio-postgres
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: stellio-postgres
    spec:
      containers:
      - env:
        - name: PGDATA
          value: /var/lib/postgresql/data/pgdata
        - name: STELLIO_SEARCH_DB_DATABASE
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: STELLIO_SEARCH_DB_DATABASE
        - name: STELLIO_SEARCH_DB_USER
          valueFrom:
           configMapKeyRef:
             name: stellio-conf
             key: STELLIO_SEARCH_DB_USER
        - name: STELLIO_SEARCH_DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: STELLIO_SEARCH_DB_PASSWORD
        - name: STELLIO_SUBSCRIPTION_DB_DATABASE
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: STELLIO_SUBSCRIPTION_DB_DATABASE
        - name: STELLIO_SUBSCRIPTION_DB_USER
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: STELLIO_SUBSCRIPTION_DB_USER
        - name: STELLIO_SUBSCRIPTION_DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: STELLIO_SUBSCRIPTION_DB_PASSWORD
        - name: POSTGRES_MULTIPLE_DATABASES
          value: "$(STELLIO_SEARCH_DB_DATABASE),$(STELLIO_SEARCH_DB_USER),$(STELLIO_SEARCH_DB_PASSWORD): $(STELLIO_SUBSCRIPTION_DB_DATABASE),$(STELLIO_SUBSCRIPTION_DB_USER),$(STELLIO_SUBSCRIPTION_DB_PASSWORD)"
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: stellio-conf
              key: POSTGRES_PASSWORD
        image: stellio/stellio-timescale-postgis:latest
        name: stellio-postgres
        ports:
        - containerPort: 5432
          name: postgres
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: stellio-postgres-storage
      restartPolicy: Always
      volumes:
      - name: stellio-postgres-storage
        persistentVolumeClaim:
          claimName: stellio-postgres-storage
status: {}
