kubernetes/subscription-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-subscription-service
  name: subscription-service
spec:
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
  selector:
    app: stellio-subscription-service
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-service
spec:
  selector:
    matchLabels:
      app: stellio-subscription-service
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: stellio-subscription-service
    spec:
      containers:
        - env:
          - name: APPLICATION_AUTHENTICATION_ENABLED
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_AUTHENTICATION_ENABLED
          - name: STELLIO_SUBSCRIPTION_DB_DATABASE
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_SUBSCRIPTION_DB_DATABASE
          - name: SPRING_PROFILES_ACTIVE
            valueFrom:
             configMapKeyRef:
               name: stellio-conf
               key: ENVIRONMENT
          - name: SPRING_FLYWAY_URL
            value: jdbc:postgresql://postgres/$(STELLIO_SUBSCRIPTION_DB_DATABASE)
          - name: SPRING_R2DBC_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_SUBSCRIPTION_DB_PASSWORD
          - name: SPRING_R2DBC_URL
            value: r2dbc:postgresql://postgres/$(STELLIO_SUBSCRIPTION_DB_DATABASE)
          - name: SPRING_R2DBC_USERNAME
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: STELLIO_SUBSCRIPTION_DB_USER
          - name: SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: KAFKA_URL
          - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
            valueFrom:
              configMapKeyRef:
                name: stellio-conf
                key: KAFKA_URL
          image: 'stellio/stellio-subscription-service:dev'
          name: stellio-subscription-service
          ports:
            - containerPort: 8084
              name: subscription
          resources: {}
      restartPolicy: Always
status: {}
