kubernetes/zookeeper-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stellio-zookeeper
  name: zookeeper
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    app: stellio-zookeeper
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stellio-zookeeper
  name: zookeeper
spec:
  selector:
    matchLabels:
      app: stellio-zookeeper
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: stellio-zookeeper
    spec:
      containers:
      - env:
        - name: ZOOKEEPER_CLIENT_PORT
          value: "2181"
        - name: ZOOKEEPER_SERVER_ID
          value: "1"
        - name: ZOOKEEPER_TICK_TIME
          value: "2000"
        image: confluentinc/cp-zookeeper:5.4.1
        name: stellio-zookeeper
        ports:
        - containerPort: 2181
          name: zookeeper
        resources: {}
      restartPolicy: Always
status: {}
