kubernetes/stellio-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: stellio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: local-stellio
      http:
        paths:
          - path: /
            backend:
              serviceName: api-gateway
              servicePort: 8080
